crates/pcb/tests/snapshots/build__warning_and_error_mixed.snap
---
source: crates/pcb/tests/build.rs
assertion_line: 239
expression: output
---
Command: pcb build board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: Input 'P2' is required but was not provided
    ╭─[ <TEMP_DIR>/.pcb/cache/github.com/mycompany/components/1.0.0/SimpleResistor.zen:5:1 ]
    │
  5 │ P2 = io(Net)
    │ ─┬  
    │  ╰── Input 'P2' is required but was not provided
    │
    ├─[ <TEMP_DIR>/board.zen:13:1 ]
    │
 13 │ SimpleResistor(name = "R1", P1 = vcc)
    │ ──────────────────┬──────────────────  
    │                   ╰──────────────────── Error instantiating `SimpleResistor`
────╯

Stack trace (most recent call last):
    <TEMP_DIR>/board.zen:13:1 (Error instantiating `SimpleResistor`)
    <TEMP_DIR>/.pcb/cache/github.com/mycompany/components/1.0.0/SimpleResistor.zen:5:1 (Input 'P2' is required but was not provided)

✗ board.zen: Build failed
Error: Build failed with errors
